tests/fixtures/fail/stdlib/stdlib_net_invalid_port_vm.walrus
import "std/net" as net;

net.tcp_bind("127.0.0.1", 70000);
